[gd_scene load_steps=19 format=3 uid="uid://bs1m1idguikev"]

[ext_resource type="Theme" uid="uid://dk1bu2y8w4psy" path="res://scenes/ui/main_theme.tres" id="1_8hfp8"]
[ext_resource type="Script" path="res://scenes/ui/power bar/power_bar.gd" id="1_ob7kw"]
[ext_resource type="Shader" path="res://scenes/ui/power bar/power_bar.gdshader" id="3_qfqpr"]
[ext_resource type="PackedScene" uid="uid://cflxrtspib0eh" path="res://scenes/ui/Tooltip/weapon_tooltip.tscn" id="4_j7qec"]
[ext_resource type="Texture2D" uid="uid://n47jub7diikx" path="res://assets/ui/energy bar/num 1.png" id="4_lvilq"]
[ext_resource type="Texture2D" uid="uid://bdvr0a4x04leu" path="res://assets/ui/energy bar/num 2.png" id="5_ev24y"]
[ext_resource type="Texture2D" uid="uid://dvyfi0byyc8qq" path="res://assets/ui/energy bar/num 3.png" id="6_3swax"]
[ext_resource type="Texture2D" uid="uid://cl530mlshc2rr" path="res://assets/ui/energy bar/num 4.png" id="7_l2mww"]
[ext_resource type="Texture2D" uid="uid://bcid5gms5iaao" path="res://assets/ui/energy bar/num 5.png" id="8_04y5n"]
[ext_resource type="Texture2D" uid="uid://b7t5u08np3yr4" path="res://assets/ui/energy bar/weapon frame.png" id="9_uoq5w"]

[sub_resource type="Gradient" id="Gradient_rhnfk"]
offsets = PackedFloat32Array(0, 0.191824, 0.435, 0.68)
colors = PackedColorArray(0, 0, 0, 1, 0.940404, 0, 0.0124335, 1, 0.996148, 0.449134, 9.62615e-07, 1, 1, 1, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cmbhi"]
gradient = SubResource("Gradient_rhnfk")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_hqoa3"]
seed = 4
frequency = 0.0024

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_x0m3h"]
generate_mipmaps = false
seamless = true
noise = SubResource("FastNoiseLite_hqoa3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fngle"]
shader = ExtResource("3_qfqpr")
shader_parameter/scroll1 = Vector2(0.045, 0.11)
shader_parameter/scroll2 = Vector2(-0.085, 0.095)
shader_parameter/texture2 = SubResource("NoiseTexture2D_x0m3h")
shader_parameter/colorTexture = SubResource("GradientTexture2D_cmbhi")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_anc77"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7kj2t"]
seamless = true
seamless_blend_skirt = 0.3
noise = SubResource("FastNoiseLite_anc77")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s6r28"]
size = Vector2(258, 46.188)

[node name="Power Bar" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_8hfp8")
script = ExtResource("1_ob7kw")
metadata/_edit_lock_ = true

[node name="PowerBarFrame" type="Polygon2D" parent="."]
z_index = 2
position = Vector2(-320.001, -66)
skew = 0.523599
color = Color(0.0941176, 0.0941176, 0.0941176, 0.792157)
antialiased = true
polygon = PackedVector2Array(-10, -10, 271.732, -10, 271.732, 60, -10, 60)
vertex_colors = PackedColorArray(0.0941176, 0.0941176, 0.0941176, 0.792157, 0.145098, 0.0941176, 0.0941176, 0.792157, 0.137255, 0, 0, 0.792157, 0.133333, 0.0941176, 0.0941176, 0.792157)

[node name="Elements" type="Control" parent="PowerBarFrame"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="B1" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(10, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B1"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(129.037, -78.8684)
scale = Vector2(0.759166, 0.755461)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B2" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(35, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B2"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(96.8948, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B3" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(60.4651, 6.9282)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B3"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(59.3953, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B4" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(84.9997, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B4"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(21.8953, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B5" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(110, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B5"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-15.605, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B6" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(135, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B6"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-53.105, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B7" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(159.999, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B7"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-90.6035, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B8" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(185, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B8"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-128.105, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B9" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(210, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B9"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-165.605, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="B10" type="Polygon2D" parent="PowerBarFrame/Elements"]
clip_children = 1
position = Vector2(235, 7.5)
scale = Vector2(0.666667, 0.666667)
color = Color(0.388235, 0.352941, 0.662745, 1)
antialiased = true
polygon = PackedVector2Array(0, 0, 25, 0, 25, 50, 0, 50)

[node name="Noise" type="Sprite2D" parent="PowerBarFrame/Elements/B10"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(-203.105, -87.4604)
scale = Vector2(0.721458, 0.717936)
skew = -0.463648
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[node name="HoverArea" type="Area2D" parent="PowerBarFrame"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerBarFrame/HoverArea"]
position = Vector2(131.239, 24.2487)
shape = SubResource("RectangleShape2D_s6r28")

[node name="LabelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = -289.0
offset_top = -154.0
offset_right = -249.0
offset_bottom = -114.0

[node name="MarginContainer" type="MarginContainer" parent="LabelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="LabelContainer/MarginContainer"]
layout_mode = 2
text = "dupa Romana#"

[node name="WeaponTooltip" parent="." instance=ExtResource("4_j7qec")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -326.0
offset_top = -361.0
offset_right = -42.0
offset_bottom = -137.0
grow_horizontal = 1
grow_vertical = 1

[node name="WeaponPanels" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="WeaponPanel1" type="Panel" parent="WeaponPanels"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = -325.0
offset_top = -132.0
offset_right = -272.6
offset_bottom = -79.6
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Num1" type="Sprite2D" parent="WeaponPanels/WeaponPanel1"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(26.75, 26.25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_lvilq")

[node name="WeaponPanel2" type="Panel" parent="WeaponPanels"]
unique_name_in_owner = true
z_index = 2
layout_mode = 1
anchors_preset = -1
offset_left = -267.48
offset_top = -132.0
offset_right = -215.08
offset_bottom = -79.6
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Num2" type="Sprite2D" parent="WeaponPanels/WeaponPanel2"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(26.75, 26.25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_ev24y")

[node name="WeaponPanel3" type="Panel" parent="WeaponPanels"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = -210.2
offset_top = -132.0
offset_right = -157.8
offset_bottom = -79.6
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Num3" type="Sprite2D" parent="WeaponPanels/WeaponPanel3"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(26.75, 26.25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_3swax")

[node name="WeaponPanel4" type="Panel" parent="WeaponPanels"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = -152.8
offset_top = -132.0
offset_right = -100.4
offset_bottom = -79.6
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Num4" type="Sprite2D" parent="WeaponPanels/WeaponPanel4"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(26.75, 26.25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_l2mww")

[node name="WeaponPanel5" type="Panel" parent="WeaponPanels"]
unique_name_in_owner = true
z_index = 2
layout_mode = 0
offset_left = -95.4
offset_top = -132.0
offset_right = -43.0
offset_bottom = -79.6
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="Num5" type="Sprite2D" parent="WeaponPanels/WeaponPanel5"]
modulate = Color(1, 1, 1, 0.431373)
position = Vector2(26.75, 26.25)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_04y5n")

[node name="WeaponFrame" type="Sprite2D" parent="."]
clip_children = 1
z_index = 1
position = Vector2(-298.5, -105.5)
scale = Vector2(0.507812, 0.507812)
texture = ExtResource("9_uoq5w")

[node name="Noise" type="Sprite2D" parent="WeaponFrame"]
texture_repeat = 2
material = SubResource("ShaderMaterial_fngle")
position = Vector2(182.154, 182.154)
scale = Vector2(0.965385, 0.960673)
texture = SubResource("NoiseTexture2D_7kj2t")
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="PowerBarFrame/HoverArea" to="." method="_on_hover_area_mouse_entered"]
